--- a/index.html
+++ b/index.html
@@ -242,6 +242,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="popup.js"></script>
+  <script src="proxy.js"></script>
 </body>
 </html>
